--- a/core/build.gradle
+++ b/core/build.gradle
@@ -9,6 +9,7 @@ dependencies {
   api "com.github.tommyettinger:libgdx-utils-box2d:$utilsBox2dVersion"
   api "com.github.tommyettinger:libgdx-utils:$utilsVersion"
   api "space.earlygrey:shapedrawer:$shapeDrawerVersion"
+  testImplementation 'junit:junit:4.13.2'
 
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
